--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/noto-sans-kr": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.17",
+    "expo-app-loading": "^2.1.1",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
@@ -30,7 +32,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
